--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media (max-width:1024px) {
+/* @media (max-width:1024px) {
 	.top-box{
         flex-direction: column;
         align-items: center;
@@ -24,4 +24,4 @@
     }
     
    
-    
+     */
