--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,413 @@
-.top-box{
+/* header */
+.main-box{
+    background-image: url('../images/palms.png');
+    width: 100%;
+    height: 324px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/* .main-box::after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    opacity: 60%;
+    position: relative;
+} */
+
+.main-div {
+    max-width: 1770px;
+    width: 100%;
+    padding: 30px 0 0 139px;   
     display: flex;
     justify-content: space-between;
-    max-width: 1239px;
-    width: 100%;  
-    margin: 0 auto;
+    position: absolute;
+    
+    
 }
 
-.navigation{
+.uls {
+     display: flex;
+}
+
+.zeta-text{
+    font-size: 14px;
+    font-weight: bold;
+    color: #FFFFFF;
+    
+}
+.lis {
+    margin-left: 50px;
+}
+.href{    
+    font-size: 12px;
+    line-height: 18px;
+    color: #FFFFFF;
+
+}
+
+.contact-text {
+    position: absolute;
+    font-size: 42px;
+    top: 146px;
+    left: 139px;
+    color: #FFFFFF;
+}
+
+.bot-contact {
+    
+    display: flex;
+    position: absolute;
+    z-index: 5;
+    color: #FFFFFF;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: 200;
+    top: 219px;
+    left: 139px;
+}
+
+.homehome::after {
+    content: '';
+    display: inline-block;
+    width: 1px;
+    height: 16px;
+    background-color: #FFFFFF;
+    margin: 0 15px 0 15px;
+    vertical-align: bottom;
+}
+
+/* section- map */
+.map-div {
+    width: 100%;
+    height: 286px;
+    margin: 50px auto 0 auto;
+    max-width: 1088px;
+    
+}
+.map-img {
+    max-width: 1088px;
+    width: 100%;
+    height: 286px;   
+}
+
+/* section-forms */
+.form-box{
+    max-width: 1088px;
+    width: 100%;
+    height: 667px;
+    margin: 56px auto 93px auto;
+}
+.form-contact1 {
+        
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 25px;
+    color: #5863F8;
+}
+.form-contact2 {
+    max-width: 370px;
+    width: 100%;
+    font-size: 42px;
+    font-weight: 700;
+    line-height: 50px;
+    margin-bottom: 40px;
+    color: #000000;
+    
+}
+.form-wraper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.textarea {
+    max-width: 720px;
+    width: 100%;
+    height: 288px;
+    resize: none;
+    margin-right: 16px;
+}
+.textarea::-webkit-input-placeholder {
+    padding: 20px 0 0 20px;
+    font-size: 13px;
+    
+}
+.textarea::-moz-placeholder {
+    padding: 20px 0 0 20px;
+    font-size: 13px;
+  
+}
+.textarea:-ms-input-placeholder {
+    padding: 20px 0 0 20px;
+    font-size: 13px;
+   
+}
+.textarea::-ms-input-placeholder {
+    padding: 20px 0 0 20px;
+    font-size: 13px;
+    
+}
+.textarea::placeholder {
+    padding: 20px 0 0 20px;
+    font-size: 13px;
+ 
+}
+
+.input {
+    max-width: 352px;
+    width: 100%;
+    height: 60px;
+    margin-bottom: 16px;
+}
+.input::-webkit-input-placeholder {
+    font-size: 13px;
+}
+.input::-moz-placeholder {
+    font-size: 13px;
+    
+}
+.input:-ms-input-placeholder {
+    font-size: 13px;
+    
+}
+.input::-ms-input-placeholder {
+    font-size: 13px;
+    
+}
+.input::placeholder {
+    font-size: 13px;
+   
+}
+
+.button {
+    max-width: 352px;
+    width: 100%;
+    height: 60px;
+    background-attachment: fixed;
+    background-color: #5863F8;
+    border: none;
+    color: #FFFFFF;
+    font-size: 14px;
+    
+}
+
+.mail-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 50px;
+}
+.mail {
+    max-width: 362px;
+    width: 100%;
+    height: 147px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+}
+
+.mail-icon {
+    width: 58px;
+    height: 59px;
+    background-color: #5863F8;
+    border-radius: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+}
+
+.mailbox-heading {
+    font-size: 18px;
+    font-family: 'Poppins', sans-serif;
+    margin: 15px 0 5px 0;
+}
+
+.mailbox-text {
+    color: #B1B1B1;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    line-height: 21px;
+
+}
+/* section pics */
+
+
+
+
+/* section-2 */
+
+.photo-text{
+    margin-top: 2px;
+
+}
+.text-photos {
+    
+    max-width: 565px;
+    /* width:100%; */
+    font-size: 14px;
+    color: #3a0eb3;
+    margin-bottom: 50px;
+    
+}
+.photo-heading{
+    width: 400px;
+    height: 115px;
+    font-size: 42px;
+    font-style: bold;
+    color: #000000;
+
+}
+.photos {
+    width: 100%;
+    /* height: 352px; */
     display: flex;
     justify-content: space-between;
 }
-.starter-left{
-    display: flex;
-    margin-top: 67px;
-}
-.starter-right{
-    margin-top: 87px;
-}
-.uls{
-    display: flex;
+
+/* footer */
+.footer-box {
+    width: 1366px;
+    height: 359px;
+    background-color: #1d1919;
 }
 
-.lis{
-    margin-right: 10px;
+.foot-contaier {
+    max-width: 1088px;
+    width: 100%;
+    height: 191px;  
+    display: flex;
+    justify-content: space-between;
+
+}
+.box1 {
+    width: 260px;
+    height: 191px;
+    margin-top: 90px;
+    margin-bottom: 54px;
+    
+}
+.zeta-box{   
+    font-size: 24px;
+    font-weight: bold;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+}
+.text-box{
+    
+    font-size: 14px;
+    color: #B1B1B1;
+    margin-bottom: 20px;
 }
 
-.iconi{
-    color: #564fd6;
-    font-size: 20px;
-    width: 15px;
-    margin-top: 80px;
-    display: none;
-    margin-left: 30px;
+.fa-brands {
+    font-size: 35px;
 }
+.fa-facebook {
+     color: blue;
+}
+.fa-twitter {
+     color: lightblue;
+    
+}
+.fa-google-plus {
+    color: darkred;
+}
+
+.footer-box2{   
+    
+    font-size: 18px;
+    font-weight: 300;
+    margin-top: 90px;
+    color: #FFFFFF;
+}
+
+.footer-nav-text{
+    
+    color: #5863F8;
+    font-size: 14;
+    margin-bottom: 10px;
+}
+.footer-lis { 
+   
+    font-size: 14;
+    margin-bottom: 20px;
+    color: #FFFFFF;
+    margin-top: 20px;
+}
+
+.fa-solid {
+    margin-right: 14px;
+    color: #5863F8;
+    font-size: 14px;
+
+}
+.footer-box3, .footer-box4{
+    margin-top: 90px;
+}
+.box-title2{
+    color: #5863F8;
+}
+
+
+/* {
+    margin-top: 90px;
+} */
+.box4-text {
+    
+    font-size: 14;
+    color: #FFFFFF;
+}
+.footer-text {
+    top: 335px;
+    left: 139px;
+    font-size: 14;
+    color: #5863F8;
+    /* margin-bottom: 600px; */
+    
+}
+
+.Copyright-text {
+    max-width: 1088px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 90px;
+   
+    
+}
+
+
+/* .backimg1{
+
+     background-image: url("../images/palms.png");
+     width: 1366px;
+     height: 324px;
+     background-size: cover;
+     position: relative;
+     display: flex;
+    justify-content: space-between;
+     */
+    
